[package]
name        = "orchinus"
version     = "0.1.0"
edition     = "2021"
authors     = ["George Miao <gm@miao.dev>"]
license     = "Apache"
description = "Decentralized MQ implementation with SWIM and CRDT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# # hash
# blake3-std = "0"

# Random number
rand = "0.8"

# Networking
quinn = "0.9.3"

# Membership
foca = { version = "0.10.0", features = ["serde", "bincode-codec"] }

# Runtime
tokio   = { version = "1", features = ["full"] }
futures = "0.3"

# Serializer
serde   = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Debug
tracing = "0.1"

# CRDT
crdts = "7.2.0"

# Utils
mod_use   = "0.2"
thiserror = "1.0.38"
tap       = "1.0.1"

[dev-dependencies]
# Time format
humantime = "2.1.0"

# Logger
tracing-subscriber = "0.3"
