[package]
name        = "orkas"
version     = "0.1.0"
edition     = "2021"
authors     = ["George Miao <gm@miao.dev>"]
license     = "Apache"
description = "Decentralized MQ implementation with SWIM and CRDT"

[dependencies]

## Networking
quinn = "0.9.3"

## Certification and security
rcgen  = "0.10.0"
rustls = "0.20.8"

## Membership
foca = { version = "0.10.0", features = ["serde", "bincode-codec", "tracing"] }

## Runtime
tokio   = { version = "1.25.0", features = ["net", "macros"] }
futures = "0.3.26"

## Serializer
serde   = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"

## Debug
tracing = "0.1.37"

## ID
uuid7 = { version = "0.3.4", features = ["serde"] }

## Channel
kanal = "0.1.0-pre8"

## Utils
color-eyre         = { version = "0.6.2", default-features = false }
tokio-util         = { version = "0.7.4", features = ["codec"] }
bytes              = { version = "1.4.0", features = ["serde"] }
mod_use            = "0.2.1"
tap                = "1.0.1"
rand               = "0.8.5"
crossbeam-skiplist = "0.1.1"
thiserror          = "1.0.38"

## CRDT
[dependencies.crdts]
version  = "7.2.0"
git      = "https://github.com/Limit-Lab/rust-crdt"
rev      = "08e12588c730ed9ee660fb074867a0cc43de9acf"
features = ["sync"]

[dev-dependencies]
## Time format
humantime = "2.1.0"
itertools = "0.10.5"

## Logger
tracing-subscriber = "0.3.16"

[registries.crates-io]
protocol = 'sparse'
