[package]
name    = "orkas-nif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## Orkas
orkas-core = { version = "0.1.0", path = "../orkas-core" }

## Error handling
color-eyre = { version = "0.6.2", default-features = false }
