[package]
name    = "orkas-nif"
version = "0.1.0"
authors = ["George Miao <gm@miao.dev>"]
edition = "2021"

[lib]
name       = "orkas_nif"
path       = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
orkas-core = { path = "../../../orkas-core" }

rustler = "0.27.0"
tap     = "1.0.1"
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.37"
